--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -11,8 +11,18 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <!-- LIKE -->
    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+   <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y15TK6RSNG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Y15TK6RSNG');
+</script>
+
 </head>
 <body class="mat-typography">
   <app-root></app-root>
 </body>
-</html> 
+</html>
